--- a/app/src/sass/components/_cards.scss
+++ b/app/src/sass/components/_cards.scss
@@ -16,13 +16,19 @@
 		grid-template-columns: auto;
 	}
 }
-@media screen and (min-width: 550px) {
+@media screen and (min-width: 650px) {
 	.card-container {
 		grid-template-columns: auto auto;
+		&.leerkansen {
+			grid-template-columns: auto;
+		}
 	}
 }
 @media screen and (min-width: 960px) {
 	.card-container {
 		grid-template-columns: auto auto auto;
+		&.leerkansen {
+			grid-template-columns: auto auto;
+		}
 	}
 }
