--- a/app/src/sass/components/_leerkansen.scss
+++ b/app/src/sass/components/_leerkansen.scss
@@ -19,8 +19,8 @@
 			&:hover {
 				box-shadow: $shadow;
 			}
-			&.dg:hover { border-color: $primary }
-			&.dzh:hover { border-color: $green }
+			&.digitale-geletterdheid:hover { border-color: $primary }
+			&.duurzaamheid:hover { border-color: $green }
 			&.ons:hover { border-color: $gray3 }
 			&.wbs:hover { border-color: $orange }
 			&.ond:hover { border-color: $sub }
