--- a/app/src/sass/index.css
+++ b/app/src/sass/index.css
@@ -33,6 +33,17 @@ input, textarea {
   .meer:hover {
     color: #00AACC; }
 
+.relative {
+  position: relative; }
+  .relative.searchfilters {
+    height: 200px; }
+    .relative.searchfilters .fixed {
+      position: fixed;
+      top: 100px;
+      width: calc(100% - 30px);
+      z-index: 998;
+      background-color: #FFFFFF; }
+
 a {
   text-decoration: none; }
   a.primary {
@@ -134,17 +145,16 @@ a {
     height: calc(100vh - 209px);
     width: 40%;
     margin-right: -15px;
-    width: calc(40% + 15px);
-    margin-top: 92px; }
+    width: calc(40% + 15px); }
   #leerkansen .card-item.leerkans {
     border-radius: 15px;
     border: 2px solid #F2F0ED;
     transition: all 200ms ease-in-out; }
     #leerkansen .card-item.leerkans:hover {
       box-shadow: 0 0px 10px rgba(0, 0, 0, 0.26); }
-    #leerkansen .card-item.leerkans.dg:hover {
+    #leerkansen .card-item.leerkans.digitale-geletterdheid:hover {
       border-color: #00AACC; }
-    #leerkansen .card-item.leerkans.dzh:hover {
+    #leerkansen .card-item.leerkans.duurzaamheid:hover {
       border-color: #BBCC00; }
     #leerkansen .card-item.leerkans.ons:hover {
       border-color: #A8A8A8; }
@@ -178,16 +188,55 @@ form .search-wrapper {
   position: relative; }
   form .search-wrapper.frontpage {
     max-width: 800px; }
+    form .search-wrapper.frontpage i {
+      top: 28px;
+      left: 30px; }
+    form .search-wrapper.frontpage input {
+      width: calc(100% - 80px);
+      border-radius: 8px;
+      max-width: 800px;
+      padding: 15px 20px 15px 60px; }
+    form .search-wrapper.frontpage > button {
+      top: 10px;
+      right: 10px;
+      height: 48px; }
+  form .search-wrapper.leerkansen i {
+    font-size: 14px;
+    top: 22px;
+    left: 22px; }
+  form .search-wrapper.leerkansen input {
+    width: calc(100% - 71px);
+    border-radius: 8px 8px 0 0;
+    font-size: 16px;
+    border: 1px solid #E8E8E8;
+    padding: 10px 20px 10px 50px; }
+  form .search-wrapper.leerkansen > .filters {
+    border: 1px solid #E8E8E8;
+    margin-top: -1px;
+    border-radius: 0 0 6px 6px; }
+    form .search-wrapper.leerkansen > .filters > button {
+      padding: 0;
+      height: 40px;
+      width: 25%;
+      border: none;
+      color: #707070;
+      border-right: 1px solid #E8E8E8;
+      outline: none;
+      transition: all 200ms ease-in-out; }
+      form .search-wrapper.leerkansen > .filters > button:first-child {
+        margin-left: 1px;
+        width: calc(25% - 1px);
+        border-radius: 0 0 0 6px; }
+      form .search-wrapper.leerkansen > .filters > button:last-child {
+        border-right: none;
+        border-radius: 0 0 6px 0; }
+      form .search-wrapper.leerkansen > .filters > button:hover {
+        background-color: #E8E8E8;
+        cursor: pointer; }
   form .search-wrapper i {
     position: absolute;
-    top: 28px;
-    left: 30px;
     color: #aeaeae; }
   form .search-wrapper input {
-    width: calc(100% - 80px);
-    max-width: 800px;
-    padding: 15px 20px 15px 60px;
-    border-radius: 8px;
     font-size: 18px;
     line-height: 2em;
     color: #252525;
@@ -200,11 +249,8 @@ form .search-wrapper {
     form .search-wrapper input::-webkit-input-placeholder {
       /* Chrome/Opera/Safari */
       color: #aeaeae; }
-  form .search-wrapper button {
+  form .search-wrapper > button {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    height: 48px;
     min-width: 100px;
     border-radius: 6px;
     border: 0;
@@ -213,7 +259,7 @@ form .search-wrapper {
     font-size: 18px;
     font-weight: bold;
     cursor: pointer; }
-    form .search-wrapper button:hover {
+    form .search-wrapper > button:hover {
       background-color: #0095b3; }
 
 nav {
