--- a/app/src/index.css
+++ b/app/src/index.css
@@ -56,6 +56,18 @@ a {
       color: #00AACC !important;
       background-color: transparent; }
 
+button {
+  text-decoration: none; }
+  button.primary {
+    border-radius: 8px;
+    color: #FFFFFF !important;
+    border: 2px solid #00AACC;
+    background-color: #00AACC; }
+    button.primary:hover {
+      transition: all 200ms ease-in-out;
+      color: #00AACC !important;
+      background-color: transparent; }
+
 .card-container {
   display: grid;
   padding: 10px 0;
