--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -428,8 +428,11 @@ nav {
 
 .content {
   position: relative;
-  padding: 15px;
-  background-color: rgb(248, 248, 248); }
+  padding: 15px; }
+
+.leerkansen-content {
+  background-color: rgb(248, 248, 248);
+}
 
 footer {
   width: 100%;
