prof page styling

--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -434,6 +434,74 @@ nav {
   background-color: rgb(248, 248, 248);
 }
 
+.profile-page body{
+  margin: 0;
+  background-color: #ececec;
+  font-family: Roboto, Calibri;
+}
+.profile-page img{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: top;
+/*box-shadow: 0 1px 15px rgba(0,0,0,0.55);*/
+}
+.profile-page .profile{
+  background-color: #FFF;
+  width: 800px;
+  height: 400px;
+  margin: 10vh auto;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+.profile-page .half{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+  height: 100%;
+}
+.profile-page .left{
+  position: absolute;
+  left: 0;
+  color: #00AACC;
+  background-color: #FFF;
+  border-radius: 5px 0 0 5px;
+  align-items: center;
+}
+.profile-page .right{
+  position: absolute;
+  right: 0;
+  color: #FFF;
+  background-color: #00AACC;
+  border-radius: 0 5px 5px 0;
+  align-items: flex-start;
+}
+.profile-page .name{
+  margin-top: 1em;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+}
+.profile-page .info{
+  width: 90%;
+  margin: auto;
+  flex-direction: column;
+  display: flex;
+}
+.profile-page .title{
+  font-size: 1.1rem;
+  font-weight: 600;
+  letter-spacing: 0.1px;
+}
+.profile-page .desc{
+  font-size: 0.9rem;
+  font-weight: 100;
+  letter-spacing: 0.3px;
+  margin: 0 1em 1em;
+}
+
 footer {
   width: 100%;
   background-color: #F2F0ED; }
