--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -575,9 +575,9 @@ footer {
     background-color: #252525; }
     #startpage .eyecather-wrapper img {
       position: absolute;
-      height: 100%;
+      /* height: 100%; */
       width: auto;
-      z-index: -1;
+      /* z-index: -1; */
       opacity: .8; }
   #startpage .content {
     text-align: center;
