--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -815,3 +815,159 @@ ul li.list:hover .copy {
   overflow: hidden;
   object-fit: cover;
 }
+
+.opportunity-detail body{
+  background: #ecf0f1;
+  font-family:lato;
+}
+
+.opportunity-detail h3{
+  font-weight:700;
+}
+
+.opportunity-detail h1{
+    position: absolute;
+    top: 90px;
+    font-size: 70px;
+    color: #fff;
+    z-index: 10;
+}
+
+.opportunity-detail .overlay{
+  position:absolute;
+  top: 0px;
+  width:100%;
+  height:150px;
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.65+0,0+100;Neutral+Density */
+  background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+  background-size:cover;
+  z-index:1;
+}
+
+.opportunity-detail .titlehead{
+  width:100%;
+  height:250px;
+  background-size:cover;
+  padding: 10px;
+}
+
+.opportunity-detail #page.opportunity-container{
+    color:#707070;
+    background: #fff;
+    margin: -40px 20px 0px 20px;
+    padding: 20px;
+  /* -webkit-box-shadow: 0px 3px 10px 0px rgba(50, 50, 50, 0.5);
+    -moz-box-shadow: 0px 3px 10px 0px rgba(50, 50, 50, 0.5); */
+    box-shadow: 0px 3px 10px 0px rgba(50, 50, 50, 0.5);
+}
+
+.opportunity-detail #menu-button{
+  position:fixed;
+  left:20px;
+  top:20px;
+  width:30px;
+  height:30px;
+  z-index:100;
+  background:transparent;
+  border:0px; 
+  padding:0px;
+}
+
+.opportunity-detail #menu-button span{
+  width:28px;
+  height:4px;
+  margin:6px 0;
+  border-radius:2px;
+  background:#fff;
+  display:block;
+}
+
+.opportunity-detail #menu{
+  position:fixed;
+  left:0px;
+  top:0px;
+  right:0px;
+  bottom:0px;
+  width:100%;
+  height:100%;
+  border-radius:50%;
+  background:rgba(0,0,0,.6);
+  transform:scale(0);
+  z-index:99;
+   opacity:0;
+     -webkit-transition: all cubic-bezier(.32, -0.6, .68, 1.6) .3s;
+    -moz-transition: all cubic-bezier(.32, -0.6, .68, 1.6) .3s;
+    -ms-transition: all cubic-bezier(.32, -0.6, .68, 1.6) .3s;
+    -o-transition: all cubic-bezier(.32, -0.6, .68, 1.6) .3s;
+    transition: all cubic-bezier(.32, -0.6, .68, 1.6) .3s; 
+}
+
+.opportunity-detail .showmenu{
+    transform:scale(1) !important;
+    border-radius:0% !important;
+  opacity:1 !important;
+     -webkit-transition: all cubic-bezier(.32, -0.6, .68, 1.6) .3s;
+    -moz-transition: all cubic-bezier(.32, -0.6, .68, 1.6) .3s;
+    -ms-transition: all cubic-bezier(.32, -0.6, .68, 1.6) .3s;
+    -o-transition: all cubic-bezier(.32, -0.6, .68, 1.6) .3s;
+    transition: all cubic-bezier(.32, -0.6, .68, 1.6) .3s; 
+} 
+
+
+.opportunity-detail #page{
+  border-radius: 40px;
+    webkit-transition: all ease-out .3s;
+    -moz-transition: all ease-out .3s;
+    -ms-transition: all ease-out .3s;
+    -o-transition: all ease-out .3s;
+    transition: all ease-out .3s; 
+  
+}
+
+.opportunity-detail ul{
+  width:100%;
+  text-align:center;
+  max-width:400px;
+  color: #fff;
+  list-style:none;
+  margin: 0 auto;
+  padding :0px !important;
+  position:relative;
+  top:50%;
+  transform:translateY(-50%);
+  ;
+}
+.opportunity-detail ul li{
+  width:100%;
+  margin:0; padding:10px;
+  font-size: 2em;
+}
+
+.opportunity-detail .btn:focus {
+  outline: none;
+}
+.opportunity-detail .btn:focus,.btn:active:focus,.btn.active:focus,
+.opportunity-detail .btn.focus,.btn:active.focus,.btn.active.focus {
+    outline: none;
+}
+
+.infobox{
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 25px;
+  padding: 0px 20px 0px 20px;
+}
+.infobox-content{
+  display: flex;
+}
+.infobox .content-left{
+  width: 30%;
+  max-width: 250px;
+  padding-left: 20px;
+}
+.infobox .content-right{
+  width: 70%;
+}
