opp detail page font fix

--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -818,7 +818,7 @@ ul li.list:hover .copy {
 
 .opportunity-detail{
   background: rgb(248, 248, 248);
-  font-family:lato;
+  /* font-family:lato; */
 }
 
 .opportunity-detail h3{
