--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -859,13 +859,14 @@ ul li.list:hover .copy {
 }
 
 .opportunity-detail #page.opportunity-container{
-    color:#707070;
-    background: #fff;
-    margin: -40px 20px 0px 20px;
-    padding: 20px;
-  /* -webkit-box-shadow: 0px 3px 10px 0px rgba(50, 50, 50, 0.5);
-    -moz-box-shadow: 0px 3px 10px 0px rgba(50, 50, 50, 0.5); */
-    box-shadow: 0px 3px 10px 0px rgba(50, 50, 50, 0.5);
+  position: relative;
+  color:#707070;
+  background: #fff;
+  margin: -40px 20px 0px 20px;
+  padding: 20px;
+/* -webkit-box-shadow: 0px 3px 10px 0px rgba(50, 50, 50, 0.5);
+  -moz-box-shadow: 0px 3px 10px 0px rgba(50, 50, 50, 0.5); */
+  box-shadow: 0px 3px 10px 0px rgba(50, 50, 50, 0.5);
 }
 
 .opportunity-detail #menu-button{
@@ -963,23 +964,34 @@ ul li.list:hover .copy {
   border-width: 2px;
   border-radius: 25px;
   padding: 0px 20px 0px 20px;
-  position: relative;
+  margin: 0px 20px 0px 20px;
+  /* width: 50%; */
+  /* margin: 0px 24%; */
+  /* margin: 0px 180px 0px 180px; */
+  /* position: relative; */
 }
 .infobox-content{
   display: flex;
-}
-.infobox .content-left{
-  width: 30%;
-  max-width: 250px;
   padding-left: 20px;
+  padding-bottom: 20px;
 }
-.infobox .content-right{
-  width: 70%;
+.infobox td{
+  padding-right: 20px;
 }
-.infobox img.badge{
+.opportunity-container img.badge{
   position: absolute;
   width: 160px;
   height: auto;
-  top: -140px;
+  top: -120px;
   right: 0;
+}
+.opportunity-container .content{
+  display: flex;
+}
+.opportunity-container .content-left{
+  width: 50%;
+}
+.opportunity-container .content-right{
+  width: 50%;
+  padding: 0px 20px 0px 20px;
 }
