edit copy icons styling

--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -788,7 +788,8 @@ ul li.list:hover .copy {
 }
 
 .edit a {
-	color: #00AACC;
+  color: #00AACC;
+  float: right;
 }
 
 .edit:hover a {
@@ -804,7 +805,12 @@ ul li.list:hover .copy {
 }
 
 .copy a {
-	color: #00AACC;
+  color: #00AACC;
+  float: right;
+}
+
+.filler{
+  flex-grow: 1;
 }
 
 .copy:hover a {
