opportunities list empty state and styling

--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -691,7 +691,7 @@ footer {
 
 .l-container {
   display: block;
-  padding-top: 115px;
+  /* padding-top: 115px; */
 }
 
 /* MODULE ==================== */
