--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -1062,7 +1062,7 @@ ul li.list:hover .delete {
   padding: 0px 20px 0px 20px;
 }
 .nav-dropdown-ext{
-  border-top: 2px solid #707070;
-  margin-top: 2px;
+  border-top: 2px dotted #ddd;
+  margin-top: 5px;
   padding-top: 1px;
 }
