--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -117,6 +117,7 @@ button.primary {
   .card-container .card-item {
     position: relative;
     background-color: transparent;
+    max-height: 500px;
     padding: 15px;
     overflow: hidden; }
 
@@ -1066,4 +1067,12 @@ ul li.list:hover .delete {
   border-top: 2px dotted #ddd;
   margin-top: 5px;
   padding-top: 1px;
+}
+.crop-opp-img{
+  max-height: 200px;
+  overflow: hidden;
+  margin: -15px;
+}
+.crop-opp-img img{
+  width: 100%;
 }
