--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -1071,7 +1071,7 @@ ul li.list:hover .delete {
 .crop-opp-img{
   max-height: 200px;
   overflow: hidden;
-  margin: -15px;
+  margin: -15px -15px 0px -15px;
 }
 .crop-opp-img img{
   width: 100%;
