--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -1027,7 +1027,7 @@ ul li.list:hover .delete {
 }
 .confirm-delete{
   text-align: center;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 .confirm-delete .content{
   display: flex;
