--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -997,7 +997,7 @@ ul li.list:hover .delete {
   top: -120px;
   right: 0;
 }
-.opportunity-container .content{
+.content-flex{
   display: flex;
 }
 .opportunity-container .content-left{
@@ -1083,3 +1083,45 @@ ul li.list:hover .delete {
   padding-left: 7%;
   padding-right: 7%;
 }
+.participants {
+  padding: 0px 20px 0px 20px;
+  border-radius: 20px;
+  overflow-x: auto;
+  font-size: 14px;
+}
+.participants table{
+  width:100%;
+  display: inline-block;
+  table-layout: fixed;
+  border-collapse: collapse;
+}
+.participants tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+.participants th {
+  background-color: #00AACC;
+  color: white;
+  height: 36px;
+}
+.participants th, .participants td{
+  padding: 5px 20px 5px 20px;
+  overflow: hidden;
+  border-bottom: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  text-align: left;
+}
+.participants button {
+  margin: 2px;
+  border-radius: 8px;
+  color: #FFFFFF !important;
+  border: 2px solid #00AACC;
+  background-color: #00AACC;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 12px;
+}
+/* .participants .table-el{
+  height: 30px;
+  white-space:nowrap;
+  overflow: hidden;
+} */
