--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -1120,8 +1120,180 @@ ul li.list:hover .delete {
   font-weight: 700;
   font-size: 12px;
 }
-/* .participants .table-el{
+.participants .table-el{
   height: 30px;
   white-space:nowrap;
   overflow: hidden;
-} */
+}
+.register-form-content
+{
+	background-color:#00AACC;
+}
+
+#register-form input
+{
+	border-width:0px;
+	outline:none;
+  font-weight:bold;
+  /* color:#707070; */
+}
+
+#register-form .b3
+{
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	-o-border-radius: 3px;
+	-ms-border-radius: 3px;
+}
+
+#register-form .tb
+{
+	display:table;
+	width:100%;
+}
+
+#register-form .td
+{
+	display:table-cell;
+	vertical-align:middle;
+}
+
+#register-form .material-icons
+{
+	color:#bbb;
+	vertical-align:middle;
+}
+
+#register-form .icon
+{
+	width:24px;
+  padding:10px;
+  color: #ddd;
+}
+
+#register-form .mrg3b
+{
+	margin-bottom:0px;
+}
+
+#register-form .mrg25t
+{
+	margin-top:25px;
+}
+
+#register-form
+{
+	font-size:16px;
+	width:400px;
+	margin:0 auto;
+  padding-left:40px;
+  padding-right:40px;
+  padding-bottom: 100px;
+  padding-top: 20px;
+	font-weight:bold;
+}
+
+#register-form .cl-wh
+{
+	color:#fff;
+}
+
+#f-mlb
+{
+	text-align:center;
+	font-size: 26px;
+	margin-bottom:10px;
+}
+
+#register-form .f-i-bx
+{
+  margin-top: 7px;
+  background-color: #fff;
+	overflow:hidden;
+}
+
+#register-form .f-i-bx input
+{
+	width:100%;
+	height:24px;
+  font-size: 13.333333px;
+  color: #707070;
+	background-color:transparent;
+	padding:0px;
+}
+
+#register-form .prt
+{
+	padding-right:10px;
+}
+
+#register-form form label
+{
+	padding-left:3px;
+}
+
+#tc-bx
+{
+    margin-top: 25px;
+    text-align: center;
+    color: #fff;
+    font-size: 14px;
+    font-weight: normal;
+}
+
+#tc-bx a
+{
+  color: #fff;
+  font-weight: bold; 
+  text-decoration:none;
+}
+
+#register-form .f-i-bx,#s-btn input
+{
+	box-shadow: 0px 4px 4px #3f3f3f;
+	-webkit-box-shadow: 0px 4px 4px #3f3f3f;
+	-moz-box-shadow: 0px 4px 4px #3f3f3f;
+	-o-box-shadow: 0px 4px 4px #3f3f3f;
+	-ms-box-shadow: 0px 4px 4px #3f3f3f;
+}
+
+#s-btn input
+{
+  padding: 10px;
+  width: 100%;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  background: linear-gradient(rgb(0, 200, 240), rgb(0, 128, 153));
+	background: -webkit-linear-gradient(rgb(0, 200, 240), rgb(0, 128, 153));
+	background: -moz-linear-gradient(rgb(0, 200, 240), rgb(0, 128, 153));
+	background: -o-linear-gradient(rgb(0, 200, 240), rgb(0, 128, 153));
+	background: -ms-linear-gradient(rgb(0, 200, 240), rgb(0, 128, 153));
+}
+
+#s-btn input:active
+{
+	position:relative;
+	top:3px;
+	box-shadow: 0px 2px 2px #3f3f3f;
+	-webkit-box-shadow: 0px 2px 2px #3f3f3f;
+	-moz-box-shadow: 0px 2px 2px #3f3f3f;
+	-o-box-shadow: 0px 2px 2px #3f3f3f;
+	-ms-box-shadow: 0px 2px 2px #3f3f3f;
+}
+#s-btn input:disabled
+{
+	position:relative;
+  top:3px;
+  color:#ddd;
+	background: linear-gradient(#bbb, #707070);
+	background: -webkit-linear-gradient(#bbb, #707070);
+	background: -moz-linear-gradient(#bbb, #707070);
+	background: -o-linear-gradient(#bbb, #707070);
+	background: -ms-linear-gradient(#bbb, #707070);
+}
+#register-form .form-group{
+  margin-bottom: 25px;
+}
+
