--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -6,7 +6,10 @@ body {
   line-height: 1.2em; }
 
 html, body, .main-content{
-  min-height:65vh;
+  min-height:70.8vh;
+}
+.main-content > .content{
+  min-height:67.6vh;
 }
 h1, h2 {
   color: #707070; }
@@ -513,6 +516,7 @@ footer {
   footer ul {
     display: flex;
     list-style: none;
+    margin-bottom: 0px;
     padding-bottom: 30px;
     padding-left: 0;
     line-height: 2em; }
@@ -580,7 +584,7 @@ footer {
     background-color: #252525; }
     #startpage .eyecather-wrapper img {
       position: absolute;
-      /* height: 100%; */
+      height: 100%;
       width: auto;
       /* z-index: -1; */
       opacity: .8; }
@@ -1134,7 +1138,7 @@ ul li.list:hover .delete {
 	background-color:#00AACC;
 }
 
-#register-form input
+.register-form input
 {
 	border-width:0px;
 	outline:none;
@@ -1142,7 +1146,7 @@ ul li.list:hover .delete {
   /* color:#707070; */
 }
 
-#register-form .b3
+.register-form .b3
 {
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -1151,54 +1155,54 @@ ul li.list:hover .delete {
 	-ms-border-radius: 3px;
 }
 
-#register-form .tb
+.register-form .tb
 {
 	display:table;
 	width:100%;
 }
 
-#register-form .td
+.register-form .td
 {
 	display:table-cell;
 	vertical-align:middle;
 }
 
-#register-form .material-icons
+.register-form .material-icons
 {
 	color:#bbb;
 	vertical-align:middle;
 }
 
-#register-form .icon
+.register-form .icon
 {
 	width:24px;
   padding:10px;
   color: #ddd;
 }
 
-#register-form .mrg3b
+.register-form .mrg3b
 {
 	margin-bottom:0px;
 }
 
-#register-form .mrg25t
+.register-form .mrg25t
 {
 	margin-top:25px;
 }
 
-#register-form
+.register-form
 {
 	font-size:16px;
 	width:400px;
 	margin:0 auto;
   padding-left:40px;
   padding-right:40px;
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
   padding-top: 20px;
 	font-weight:bold;
 }
 
-#register-form .cl-wh
+.register-form .cl-wh
 {
 	color:#fff;
 }
@@ -1210,14 +1214,14 @@ ul li.list:hover .delete {
 	margin-bottom:10px;
 }
 
-#register-form .f-i-bx
+.register-form .f-i-bx
 {
   margin-top: 7px;
   background-color: #fff;
 	overflow:hidden;
 }
 
-#register-form .f-i-bx input
+.register-form .f-i-bx input
 {
 	width:100%;
 	height:24px;
@@ -1227,12 +1231,12 @@ ul li.list:hover .delete {
 	padding:0px;
 }
 
-#register-form .prt
+.register-form .prt
 {
 	padding-right:10px;
 }
 
-#register-form form label
+.register-form form label
 {
 	padding-left:3px;
 }
@@ -1253,7 +1257,7 @@ ul li.list:hover .delete {
   text-decoration:none;
 }
 
-#register-form .f-i-bx,#s-btn input
+.register-form .f-i-bx,#s-btn input
 {
 	box-shadow: 0px 4px 4px #3f3f3f;
 	-webkit-box-shadow: 0px 4px 4px #3f3f3f;
@@ -1297,7 +1301,46 @@ ul li.list:hover .delete {
 	background: -o-linear-gradient(#bbb, #707070);
 	background: -ms-linear-gradient(#bbb, #707070);
 }
-#register-form .form-group{
+.register-form .form-group{
   margin-bottom: 25px;
 }
-
+#fourOhFour{
+  background: url(http://www.reactiongifs.us/wp-content/uploads/2015/04/nothing_to_see_here_naked_gun.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  min-height: 75vh;
+  color: white;
+}
+#fourOhFour h1{
+  color: white;
+  font-size: 160px;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+#fourOhFour h2{
+  color: white;
+  margin-top: 0;
+  max-width: 700px;
+  font-size: 30px;
+  width: 90%;
+}
+#fourOhFour p{
+  color: white;
+  text-align: left;
+  padding-bottom: 32px;
+  
+}
+#fourOhFour a{
+  color: white;
+  text-decoration: underline;
+}
+#fourOhFour .container{
+  max-width: 100%;
+  background-color: black;
+  opacity: 0.6;
+}
+.login-page{
+  padding-top: 15vh;
+  padding-bottom: 15vh;
+}
