--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -573,7 +573,7 @@ footer {
   max-height: 900px !important;
   overflow: hidden !important;
   contain: strict !important;
-  text-shadow: 0 10px 10px rgba(0, 0, 0, 0.26); }
+  text-shadow: 0 10px 10px rgba(0, 0, 0, 0.43); }
   #startpage .eyecather-wrapper {
     width: 100% !important;
     position: absolute !important;
@@ -582,7 +582,7 @@ footer {
     max-height: 900px !important;
     overflow: hidden !important;
     contain: strict !important;
-    background-color: #0006; }
+    background-color: #0010144D; }
     #startpage .eyecather-wrapper img {
       position: absolute;
       height: 100%;
@@ -591,7 +591,7 @@ footer {
       opacity: .8; }
   #startpage .content {
     text-align: center;
-    margin: calc(30vh - 30px) 0;
+    margin: calc(25vh - 30px) 0;
     width: calc(100% - 30px) !important;
     min-height: 300px !important;
     max-height: 840px !important;
@@ -603,14 +603,15 @@ footer {
     }
     #startpage .content h1 {
       margin: 0;
-      font-size: 7vh; }
+      font-size: 6vh; }
     #startpage .content h2 {
-      margin-top: 0; }
+      margin-top: 0;
+      font-size: 4vh; }
     #startpage .content p{
-      font-size: 3vh;
-      line-height: 3vh;
+      font-size: 2.3vh;
+      line-height: 2.5vh;
       display: inline-block;
-      max-width: 60vw;
+      max-width: 45vw;
     }
     /* @media screen and (min-width: 960px) {
       #startpage .content h1 {
