--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -582,7 +582,8 @@ footer {
     max-height: 900px !important;
     overflow: hidden !important;
     contain: strict !important;
-    background-color: rgba(28, 111, 144, 0.5); 
+    /* background-color: rgba(28, 111, 144, 0.5);  */
+    background: linear-gradient(to bottom, rgba(0, 180, 255, 0.04), rgba(0, 27, 39, 0.75));
   }
     #startpage .eyecather-wrapper img {
       position: absolute;
@@ -593,7 +594,7 @@ footer {
     }
   #startpage .content {
     text-align: center;
-    margin: calc(25vh - 30px) 0;
+    margin: calc(30vh - 30px) 0;
     width: calc(100% - 30px) !important;
     min-height: 300px !important;
     max-height: 840px !important;
