--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -1391,3 +1391,89 @@ ul li.list:hover .delete {
   padding-top: 15vh;
   padding-bottom: 15vh;
 }
+
+.clear, article.post:after {
+  clear: both;
+  content: "";
+  display: block;
+}
+article.post {
+  margin-bottom: 10px;
+  padding: 0 0 10px 110px;
+  color:#707070;
+}
+article.post:last-of-type {
+  border-bottom: 0;
+  padding-bottom: 0;
+}
+/* article.post img {
+  float: left;
+  margin-left: -110px;
+  max-height: 20vh;
+  height:100%;
+  width: auto;
+  max-width: 20vw;
+} */
+.crop-news-img{
+  float: left;
+  margin: -10px 10px -15px -120px;
+  /* margin-left: -110px; */
+  padding:0px;
+  height:20vh;
+  width:20vw;
+  max-height: 20vh;
+  max-width: 20vw;
+  overflow: hidden;
+  /* margin: -15px -15px 0px -15px; */
+  position: relative;
+}
+/* .crop-news-img:after {
+  content: '';
+  position: absolute;
+  top: 0; right: 0;
+  bottom: 0; left: 0;
+  background: linear-gradient(180deg,rgba(100,100,100,.03),rgb(100, 100, 100, 0.20));
+} */
+.crop-news-img img{
+  width: 100%;
+  height: auto;
+}
+article.post h1 {
+  font-size: 26px;
+  font-weight: normal;
+  margin: 0;
+}
+article.post a {
+  color: #dc4e00;
+  text-decoration: none;
+}
+article.post time {
+  display: block;
+  font-size: 11px;
+  font-weight: bold;
+}
+article.post small {
+  display: block;
+  font-size: 11px;
+  font-weight: bold;
+}
+.news-item{
+  background-color: white;
+  margin: 10px;
+  padding: 5px;
+  border-radius: 5px;
+  position: relative;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.2);
+    -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.news-item:hover {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25), 0 5px 8px rgba(0, 0, 0, 0.22);
+  cursor: pointer;
+}
+.news-items-content {
+  background-color: rgb(248, 248, 248);
+  width: 100%;
+}
