--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -1416,11 +1416,11 @@ article.post:last-of-type {
 } */
 .crop-news-img{
   float: left;
-  margin: -10px 10px -15px -120px;
+  margin: -5px 10px -15px -120px;
   /* margin-left: -110px; */
   padding:0px;
   height:20vh;
-  width:20vw;
+  width:17vw;
   max-height: 20vh;
   max-width: 20vw;
   overflow: hidden;
@@ -1435,8 +1435,21 @@ article.post:last-of-type {
   background: linear-gradient(180deg,rgba(100,100,100,.03),rgb(100, 100, 100, 0.20));
 } */
 .crop-news-img img{
-  width: 100%;
-  height: auto;
+  margin:0;
+  padding:0;
+  width: auto;
+  /* min-width: 100%; */
+  /* min-height: 100%; */
+  height: 100%;
+}
+.crop-news-img::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(90deg,rgba(100,100,100,.03),rgb(100, 100, 100, 0.20));
 }
 article.post h1 {
   font-size: 26px;
