experience and news item detail page

--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -863,6 +863,7 @@ ul li.list:hover .delete {
 
 .opportunity-detail{
   background: rgb(248, 248, 248);
+  min-height: 70.8vh;
   /* font-family:lato; */
 }
 
