--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -1491,3 +1491,10 @@ article.post small {
   background-color: rgb(248, 248, 248);
   width: 100%;
 }
+.ervaring-gradient:after{
+  content: '';
+  position: absolute;
+  top: 0; right: 0;
+  bottom: 0; left: 0;
+  background: linear-gradient(180deg,rgba(100,100,100,.03),rgb(100, 100, 100, 0.10));
+}
