--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -787,7 +787,7 @@ footer {
 .list__label--value {
   font-size: 1.3em;
   color: #707070;
-  overflow: hidden;
+  /* overflow: hidden; */
   float: left;
 }
 @media screen and (max-width: 650px) {
