--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -143,6 +143,13 @@ button.primary {
       grid-template-columns: auto auto; }
     .card-container.aangemaakte-leerkansen {
       grid-template-columns: auto auto; } }
+@media screen and (min-width: 1600px) {
+  .card-container {
+    grid-template-columns: auto auto auto auto; }
+    .card-container.leerkansen {
+      grid-template-columns: auto auto auto; }
+    .card-container.aangemaakte-leerkansen {
+      grid-template-columns: auto auto auto; } }
 
 #recente-ervaringen h1 {
   text-align: center; }
